test_programs/compile_failure/signed_integer_literal_underflow/src/main.nr
fn main() {
    foo(-129)
}

fn foo(_x: i8) {}
